--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -738,6 +738,7 @@
         "    self.dob = dob\n",
         "    self.hsName = hsName\n",
         "    self.hsCity = hsCity\n",
+        "    self.hsState = hsState\n",
         "    self.degree = degree\n",
         "    self.address = address\n",
         "    self.transcript = transcript if transcript is not None else []\n",
@@ -751,6 +752,7 @@
         "    print(f\"Date of birth: {self.dob}\")\n",
         "    print(f\"High school name: {self.hsName}\")\n",
         "    print(f\"High school city: {self.hsCity}\")\n",
+        "    print(f\"High school state: {self.hsState}\")\n",
         "    print(f\"Degree: {self.degree}\")\n",
         "    print(f\"Address: {self.address}\")\n",
         "    print(f\"Transcript:\")\n",
@@ -823,7 +825,7 @@
         "id": "HKEGvv6Zl6hF"
       },
       "id": "HKEGvv6Zl6hF",
-      "execution_count": 283,
+      "execution_count": 1,
       "outputs": []
     },
     {
