--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -732,7 +732,7 @@
         "    print(f\"     --GPA: {self.gpa if self.gpa is not None else 'N/A'}\")\n",
         "\n",
         "class StudentRecord(object):\n",
-        "  def __init__ (self, firstName, lastName, dob, hsName, hsCity, degree, address, transcript):\n",
+        "  def __init__ (self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript):\n",
         "    self.firstName = firstName\n",
         "    self.lastName = lastName\n",
         "    self.dob = dob\n",
@@ -825,7 +825,7 @@
         "id": "HKEGvv6Zl6hF"
       },
       "id": "HKEGvv6Zl6hF",
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
