--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -741,7 +741,7 @@
         "    self.hsState = hsState\n",
         "    self.degree = degree\n",
         "    self.address = address\n",
-        "    self.transcript = transcript if transcript is not None else []\n",
+        "    self.transcript = transcript\n",
         "\n",
         "  def newCourse(self, course_obj):\n",
         "    self.transcript.append(course_obj)\n",
@@ -825,13 +825,13 @@
         "id": "HKEGvv6Zl6hF"
       },
       "id": "HKEGvv6Zl6hF",
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "me = StudentRecord(\"Ryan\", \"Suhr\", \"10-16-1994\", \"UNO\", \"Omaha\", \"MBA\", \"123 Main St\",[])\n",
+        "me = StudentRecord(\"Ryan\", \"Suhr\", \"10-16-1994\", \"UNO\", \"Omaha\", \"NE\", \"MBA\", \"123 Main St\",[])\n",
         "course1 = Course(\"Tools for Data Analysis\", \"2024\", \"Fall\", 3, \"A+\")\n",
         "course2 = Course(\"Quantitative Methods\", \"2024\", \"Fall\", 3, \"A+\")"
       ],
@@ -839,7 +839,7 @@
         "id": "f_tl9orTOF0E"
       },
       "id": "f_tl9orTOF0E",
-      "execution_count": 285,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -852,7 +852,7 @@
         "id": "S_83P_KyQk_w"
       },
       "id": "S_83P_KyQk_w",
-      "execution_count": 286,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -865,10 +865,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L0JEsVORYFf5",
-        "outputId": "9931b135-9e8a-4f5a-f7f2-71143ad6bddb"
+        "outputId": "6d7610fb-3763-402e-afc0-1f6affb4f059"
       },
       "id": "L0JEsVORYFf5",
-      "execution_count": 287,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,7 +879,7 @@
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: N/A\n"
+            "     --GPA: 4.0\n"
           ]
         }
       ]
@@ -894,10 +894,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JgHbZsxlukJU",
-        "outputId": "55dd3e59-86ea-4572-91de-60245bd5ba82"
+        "outputId": "de36036c-aec9-4329-cf75-8e74a44159fd"
       },
       "id": "JgHbZsxlukJU",
-      "execution_count": 288,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +908,7 @@
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: N/A\n"
+            "     --GPA: 4.0\n"
           ]
         }
       ]
@@ -923,10 +923,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P6b-MVfMR1g8",
-        "outputId": "73ea0888-8b67-45c7-e581-61ef5f59701d"
+        "outputId": "784f3506-586f-4174-f3dc-4b3a63cc9f66"
       },
       "id": "P6b-MVfMR1g8",
-      "execution_count": 289,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,6 +937,7 @@
             "Date of birth: 10-16-1994\n",
             "High school name: UNO\n",
             "High school city: Omaha\n",
+            "High school state: NE\n",
             "Degree: MBA\n",
             "Address: 123 Main St\n",
             "Transcript:\n",
@@ -945,13 +946,13 @@
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: N/A\n",
+            "     --GPA: 4.0\n",
             "   -Course: Quantitative Methods\n",
             "     --Year: 2024\n",
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: N/A\n"
+            "     --GPA: 4.0\n"
           ]
         }
       ]
@@ -966,10 +967,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M_eiskt8xAcS",
-        "outputId": "9a0c5daa-7e55-4102-dec3-0e7bd582006f"
+        "outputId": "42f551c9-5ba8-4baa-b730-f76989eba27a"
       },
       "id": "M_eiskt8xAcS",
-      "execution_count": 290,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 290
+          "execution_count": 16
         }
       ]
     },
@@ -992,7 +993,7 @@
         "id": "NA_DgEBqxJF6"
       },
       "id": "NA_DgEBqxJF6",
-      "execution_count": 291,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1005,10 +1006,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Ea1wiGQA5PO",
-        "outputId": "5ddfb495-a85f-417f-8816-5ef87a02409c"
+        "outputId": "1bafe9f3-0c8f-4198-afdb-66556ce52435"
       },
       "id": "2Ea1wiGQA5PO",
-      "execution_count": 292,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1019,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 292
+          "execution_count": 18
         }
       ]
     },
@@ -1032,10 +1033,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4RMYNf2BJKyz",
-        "outputId": "84e7c0f1-aae0-4c32-b842-df34e45c4e81"
+        "outputId": "87332230-f4cb-48bd-a92f-fe284b8c3c97"
       },
       "id": "4RMYNf2BJKyz",
-      "execution_count": 293,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
