--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -732,7 +732,7 @@
         "    print(f\"     --GPA: {self.gpa if self.gpa is not None else 'N/A'}\")\n",
         "\n",
         "class StudentRecord(object):\n",
-        "  def __init__ (self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript):\n",
+        "  def __init__ (self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript=[]):\n",
         "    self.firstName = firstName\n",
         "    self.lastName = lastName\n",
         "    self.dob = dob\n",
@@ -825,7 +825,7 @@
         "id": "HKEGvv6Zl6hF"
       },
       "id": "HKEGvv6Zl6hF",
-      "execution_count": 10,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -839,7 +839,7 @@
         "id": "f_tl9orTOF0E"
       },
       "id": "f_tl9orTOF0E",
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -852,7 +852,7 @@
         "id": "S_83P_KyQk_w"
       },
       "id": "S_83P_KyQk_w",
-      "execution_count": 12,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -865,10 +865,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L0JEsVORYFf5",
-        "outputId": "6d7610fb-3763-402e-afc0-1f6affb4f059"
+        "outputId": "bcf05ca9-9949-44f1-a517-2ec36de35c68"
       },
       "id": "L0JEsVORYFf5",
-      "execution_count": 22,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,7 +879,7 @@
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: 4.0\n"
+            "     --GPA: N/A\n"
           ]
         }
       ]
@@ -894,10 +894,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JgHbZsxlukJU",
-        "outputId": "de36036c-aec9-4329-cf75-8e74a44159fd"
+        "outputId": "9fc07901-1496-46e8-8842-0538cc9a6f3b"
       },
       "id": "JgHbZsxlukJU",
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +908,7 @@
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: 4.0\n"
+            "     --GPA: N/A\n"
           ]
         }
       ]
@@ -923,10 +923,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P6b-MVfMR1g8",
-        "outputId": "784f3506-586f-4174-f3dc-4b3a63cc9f66"
+        "outputId": "d4cfb2f2-62a7-4778-ef5b-5ab7c2ec42a7"
       },
       "id": "P6b-MVfMR1g8",
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,13 +946,13 @@
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: 4.0\n",
+            "     --GPA: N/A\n",
             "   -Course: Quantitative Methods\n",
             "     --Year: 2024\n",
             "     --Semester: Fall\n",
             "     --Credits: 3\n",
             "     --Grade: A+\n",
-            "     --GPA: 4.0\n"
+            "     --GPA: N/A\n"
           ]
         }
       ]
@@ -967,10 +967,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M_eiskt8xAcS",
-        "outputId": "42f551c9-5ba8-4baa-b730-f76989eba27a"
+        "outputId": "f1842cfb-ff53-44ce-ab12-4dc67fdd36e5"
       },
       "id": "M_eiskt8xAcS",
-      "execution_count": 16,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 29
         }
       ]
     },
@@ -993,7 +993,7 @@
         "id": "NA_DgEBqxJF6"
       },
       "id": "NA_DgEBqxJF6",
-      "execution_count": 17,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1006,10 +1006,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Ea1wiGQA5PO",
-        "outputId": "1bafe9f3-0c8f-4198-afdb-66556ce52435"
+        "outputId": "c784fdd9-0438-4574-9e64-6e55788f14c8"
       },
       "id": "2Ea1wiGQA5PO",
-      "execution_count": 18,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +1019,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 31
         }
       ]
     },
@@ -1033,10 +1033,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4RMYNf2BJKyz",
-        "outputId": "87332230-f4cb-48bd-a92f-fe284b8c3c97"
+        "outputId": "195e85b5-4f93-4946-f275-bae07d060291"
       },
       "id": "4RMYNf2BJKyz",
-      "execution_count": 19,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
