--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -715,13 +715,12 @@
         "#si-academic-record\n",
         "\n",
         "class Course(object):\n",
-        "  def __init__ (self, course, year, semester, credits=0, grade=\"0\"):\n",
+        "  def __init__ (self, course, year, semester, credits=0, grade=0):\n",
         "    self.course = course\n",
         "    self.year = year\n",
         "    self.semester = semester\n",
         "    self.credits = credits\n",
         "    self.grade = grade\n",
-        "    self.gpa = None\n",
         "\n",
         "  def display_course(self):\n",
         "    print(f\"   -Course: {self.course}\")\n",
@@ -729,7 +728,6 @@
         "    print(f\"     --Semester: {self.semester}\")\n",
         "    print(f\"     --Credits: {self.credits}\")\n",
         "    print(f\"     --Grade: {self.grade}\")\n",
-        "    print(f\"     --GPA: {self.gpa if self.gpa is not None else 'N/A'}\")\n",
         "\n",
         "class StudentRecord(object):\n",
         "  def __init__ (self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript=[]):\n",
@@ -743,8 +741,8 @@
         "    self.address = address\n",
         "    self.transcript = transcript\n",
         "\n",
-        "  def newCourse(self, course_obj):\n",
-        "    self.transcript.append(course_obj)\n",
+        "  def newCourse(self, course, year, semester, credits=0, grade=0):\n",
+        "    self.transcript.append(Course(course, year, semester, credits, grade))\n",
         "\n",
         "  def display_studentrecord(self):\n",
         "    print(f\"First name: {self.firstName}\")\n",
@@ -762,40 +760,11 @@
         "  def credits(self):\n",
         "    return float(sum(course.credits for course in self.transcript))\n",
         "\n",
-        "  def grade_conversion(self):\n",
-        "    for course in self.transcript:\n",
-        "      if course.grade == \"A+\" or course.grade == \"A\":\n",
-        "        course.gpa = 4.0\n",
-        "      elif course.gpa == \"A-\":\n",
-        "        course.gpa = 3.7\n",
-        "      elif course.gpa == \"B+\":\n",
-        "        course.grade = 3.3\n",
-        "      elif course.gpa == \"B\":\n",
-        "        course.gpa = 3.0\n",
-        "      elif course.gpa == \"B-\":\n",
-        "        course.grade = 2.7\n",
-        "      elif course.gpa == \"C+\":\n",
-        "        course.grade = 2.3\n",
-        "      elif course.gpa == \"C\":\n",
-        "        course.grade = 2.0\n",
-        "      elif course.gpa == \"C-\":\n",
-        "        course.grade = 1.7\n",
-        "      elif course.gpa == \"D+\":\n",
-        "        course.grade = 1.3\n",
-        "      elif course.gpa == \"D\":\n",
-        "        course.grade = 1.0\n",
-        "      elif course.gpa == \"D-\":\n",
-        "        course.grade = 0.7\n",
-        "      elif course.gpa == \"F\":\n",
-        "        course.grade = 0.0\n",
-        "      else:\n",
-        "        print (f\"Invalid grade for course: {course.course}\")\n",
-        "\n",
         "  def cumGPA(self):\n",
         "    totalGP = 0\n",
         "    totalCR = 0\n",
         "    for course in self.transcript:\n",
-        "      totalGP += course.gpa * course.credits\n",
+        "      totalGP += course.grade * course.credits\n",
         "      totalCR += course.credits\n",
         "    return totalGP / totalCR\n",
         "\n",
@@ -804,7 +773,7 @@
         "    semesterCR = 0\n",
         "    for course in self.transcript:\n",
         "      if course.year == year and course.semester == semester:\n",
-        "        semesterGP += course.gpa * course.credits\n",
+        "        semesterGP += course.grade * course.credits\n",
         "        semesterCR += course.credits\n",
         "      return semesterGP / semesterCR\n",
         "    else:\n",
@@ -825,227 +794,8 @@
         "id": "HKEGvv6Zl6hF"
       },
       "id": "HKEGvv6Zl6hF",
-      "execution_count": 33,
+      "execution_count": 82,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "me = StudentRecord(\"Ryan\", \"Suhr\", \"10-16-1994\", \"UNO\", \"Omaha\", \"NE\", \"MBA\", \"123 Main St\",[])\n",
-        "course1 = Course(\"Tools for Data Analysis\", \"2024\", \"Fall\", 3, \"A+\")\n",
-        "course2 = Course(\"Quantitative Methods\", \"2024\", \"Fall\", 3, \"A+\")"
-      ],
-      "metadata": {
-        "id": "f_tl9orTOF0E"
-      },
-      "id": "f_tl9orTOF0E",
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "me.newCourse(course1)\n",
-        "me.newCourse(course2)"
-      ],
-      "metadata": {
-        "id": "S_83P_KyQk_w"
-      },
-      "id": "S_83P_KyQk_w",
-      "execution_count": 25,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "course1.display_course()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "L0JEsVORYFf5",
-        "outputId": "bcf05ca9-9949-44f1-a517-2ec36de35c68"
-      },
-      "id": "L0JEsVORYFf5",
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   -Course: Tools for Data Analysis\n",
-            "     --Year: 2024\n",
-            "     --Semester: Fall\n",
-            "     --Credits: 3\n",
-            "     --Grade: A+\n",
-            "     --GPA: N/A\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "course2.display_course()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JgHbZsxlukJU",
-        "outputId": "9fc07901-1496-46e8-8842-0538cc9a6f3b"
-      },
-      "id": "JgHbZsxlukJU",
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   -Course: Quantitative Methods\n",
-            "     --Year: 2024\n",
-            "     --Semester: Fall\n",
-            "     --Credits: 3\n",
-            "     --Grade: A+\n",
-            "     --GPA: N/A\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "me.display_studentrecord()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P6b-MVfMR1g8",
-        "outputId": "d4cfb2f2-62a7-4778-ef5b-5ab7c2ec42a7"
-      },
-      "id": "P6b-MVfMR1g8",
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "First name: Ryan\n",
-            "Last name: Suhr\n",
-            "Date of birth: 10-16-1994\n",
-            "High school name: UNO\n",
-            "High school city: Omaha\n",
-            "High school state: NE\n",
-            "Degree: MBA\n",
-            "Address: 123 Main St\n",
-            "Transcript:\n",
-            "   -Course: Tools for Data Analysis\n",
-            "     --Year: 2024\n",
-            "     --Semester: Fall\n",
-            "     --Credits: 3\n",
-            "     --Grade: A+\n",
-            "     --GPA: N/A\n",
-            "   -Course: Quantitative Methods\n",
-            "     --Year: 2024\n",
-            "     --Semester: Fall\n",
-            "     --Credits: 3\n",
-            "     --Grade: A+\n",
-            "     --GPA: N/A\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "me.credits()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "M_eiskt8xAcS",
-        "outputId": "f1842cfb-ff53-44ce-ab12-4dc67fdd36e5"
-      },
-      "id": "M_eiskt8xAcS",
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "me.grade_conversion()"
-      ],
-      "metadata": {
-        "id": "NA_DgEBqxJF6"
-      },
-      "id": "NA_DgEBqxJF6",
-      "execution_count": 30,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "me.cumGPA()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2Ea1wiGQA5PO",
-        "outputId": "c784fdd9-0438-4574-9e64-6e55788f14c8"
-      },
-      "id": "2Ea1wiGQA5PO",
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 31
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "me.scholarship()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4RMYNf2BJKyz",
-        "outputId": "195e85b5-4f93-4946-f275-bae07d060291"
-      },
-      "id": "4RMYNf2BJKyz",
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Full-ride\n"
-          ]
-        }
-      ]
     }
   ],
   "metadata": {
