--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -766,7 +766,11 @@
         "    for course in self.transcript:\n",
         "      totalGP += course.grade * course.credits\n",
         "      totalCR += course.credits\n",
-        "    return totalGP / totalCR\n",
+        "\n",
+        "    if totalCR > 0:\n",
+        "      return totalGP / totalCR\n",
+        "    else:\n",
+        "      return 0\n",
         "\n",
         "  def semGPA(self, year, semester):\n",
         "    semesterGP = 0\n",
@@ -775,9 +779,11 @@
         "      if course.year == year and course.semester == semester:\n",
         "        semesterGP += course.grade * course.credits\n",
         "        semesterCR += course.credits\n",
+        "\n",
+        "    if semesterCR > 0:\n",
         "      return semesterGP / semesterCR\n",
         "    else:\n",
-        "      print (f\"No courses found for {year} {semester}\")\n",
+        "      return 0\n",
         "\n",
         "  def scholarship(self):\n",
         "    cumGPA = self.cumGPA()\n",
@@ -794,8 +800,140 @@
         "id": "HKEGvv6Zl6hF"
       },
       "id": "HKEGvv6Zl6hF",
-      "execution_count": 82,
+      "execution_count": 109,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "me = StudentRecord(\"Ryan\", \"Suhr\", \"10/16/1994\", \"UNO\", \"Omaha\", \"NE\", \"MBA\", \"1234 Main St\")"
+      ],
+      "metadata": {
+        "id": "NyRdfC4v9AA1"
+      },
+      "id": "NyRdfC4v9AA1",
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "me.newCourse(\"Math 101\", 2024, 1, 3, 4)"
+      ],
+      "metadata": {
+        "id": "nkHktnbh9hgg"
+      },
+      "id": "nkHktnbh9hgg",
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "me.newCourse(\"English 101\", 2024, 1, 3, 3.5)"
+      ],
+      "metadata": {
+        "id": "PAtDC3pj9ya4"
+      },
+      "id": "PAtDC3pj9ya4",
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "me.display_studentrecord()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eGCdQdak93qQ",
+        "outputId": "0ba29305-bfac-4314-d182-22855cd7db9b"
+      },
+      "id": "eGCdQdak93qQ",
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First name: Ryan\n",
+            "Last name: Suhr\n",
+            "Date of birth: 10/16/1994\n",
+            "High school name: UNO\n",
+            "High school city: Omaha\n",
+            "High school state: NE\n",
+            "Degree: MBA\n",
+            "Address: 1234 Main St\n",
+            "Transcript:\n",
+            "   -Course: Math 101\n",
+            "     --Year: 2024\n",
+            "     --Semester: 1\n",
+            "     --Credits: 3\n",
+            "     --Grade: 4\n",
+            "   -Course: English 101\n",
+            "     --Year: 2024\n",
+            "     --Semester: 1\n",
+            "     --Credits: 3\n",
+            "     --Grade: 3.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "me.cumGPA()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tCWSh1ww-W8W",
+        "outputId": "15ba6879-2f0d-41d5-aa98-ee201b433b8a"
+      },
+      "id": "tCWSh1ww-W8W",
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "me.semGPA(2024,1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yOihxcbu-bNp",
+        "outputId": "36f8c183-4b8a-4b8b-ed56-6b7b9b0bb9dd"
+      },
+      "id": "yOihxcbu-bNp",
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
     }
   ],
   "metadata": {
