--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -788,19 +788,19 @@
         "  def scholarship(self):\n",
         "    cumGPA = self.cumGPA()\n",
         "    if cumGPA >= 3.9:\n",
-        "      print(f\"Full-ride\")\n",
+        "      return \"Full-ride\"\n",
         "    elif 3.9 > cumGPA >= 3.63:\n",
-        "      print(f\"Half-tuition\")\n",
+        "      return \"Half-tuition\"\n",
         "    elif 3.63 > cumGPA >= 3.3:\n",
-        "      print(f\"Quarter-tuition\")\n",
+        "      return \"Quarter-tuition\"\n",
         "    else:\n",
-        "      print(f\"Not eligible\")"
+        "      return \"Not eligible\""
       ],
       "metadata": {
         "id": "HKEGvv6Zl6hF"
       },
       "id": "HKEGvv6Zl6hF",
-      "execution_count": 109,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
         "id": "NyRdfC4v9AA1"
       },
       "id": "NyRdfC4v9AA1",
-      "execution_count": 98,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -824,7 +824,7 @@
         "id": "nkHktnbh9hgg"
       },
       "id": "nkHktnbh9hgg",
-      "execution_count": 99,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -836,7 +836,7 @@
         "id": "PAtDC3pj9ya4"
       },
       "id": "PAtDC3pj9ya4",
-      "execution_count": 100,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -849,10 +849,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eGCdQdak93qQ",
-        "outputId": "0ba29305-bfac-4314-d182-22855cd7db9b"
+        "outputId": "98d3b511-8cb0-4ff3-9847-6767e38710f8"
       },
       "id": "eGCdQdak93qQ",
-      "execution_count": 101,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,10 +891,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tCWSh1ww-W8W",
-        "outputId": "15ba6879-2f0d-41d5-aa98-ee201b433b8a"
+        "outputId": "f5c3db13-dcd7-473a-fbb9-1b1249373787"
       },
       "id": "tCWSh1ww-W8W",
-      "execution_count": 105,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,7 +904,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 7
         }
       ]
     },
@@ -918,10 +918,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOihxcbu-bNp",
-        "outputId": "36f8c183-4b8a-4b8b-ed56-6b7b9b0bb9dd"
+        "outputId": "f6aa918f-5bf8-47ed-ffbc-fe6ac58ea09d"
       },
       "id": "yOihxcbu-bNp",
-      "execution_count": 106,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -931,7 +931,38 @@
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "me.scholarship()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "JtgKm64nadDD",
+        "outputId": "0d8780f9-cc8c-4504-89d2-0580ec1cfd20"
+      },
+      "id": "JtgKm64nadDD",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Half-tuition'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
