--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -613,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "id": "ff828581-99ed-444e-80eb-05f2842d1e12",
       "metadata": {
         "id": "ff828581-99ed-444e-80eb-05f2842d1e12"
@@ -627,7 +627,7 @@
         "    self.real = real\n",
         "    self.imag = imag\n",
         "\n",
-        "  def __conjugate__(self):\n",
+        "  def conjugate(self):\n",
         "    return ComplexNumber(self.real, -self.imag)\n",
         "\n",
         "  def __abs__(self):\n",
@@ -664,10 +664,15 @@
         "    return ComplexNumber(self.real - other.real, self.imag - other.imag)\n",
         "\n",
         "  def __mul__(self, other):\n",
-        "    return ComplexNumber ((self.real + self.imag)*(other.real + other.imag))\n",
+        "    real_part = self.real * other.real - self.imag * other.imag\n",
+        "    imag_part = self.real * other.imag + self.imag * other.real\n",
+        "    return ComplexNumber(real_part, imag_part)\n",
         "\n",
-        "  def __div__(self, other):\n",
-        "    return ComplexNumber ((self.real + self.imag)/(other.real + other.imag))"
+        "  def __truediv__(self, other):\n",
+        "    denominator = other.real**2 + other.imag**2\n",
+        "    real_part = (self.real * other.real + self.imag * other.imag) / denominator\n",
+        "    imag_part = (self.imag * other.real - self.real * other.imag) / denominator\n",
+        "    return ComplexNumber(real_part, imag_part)"
       ]
     },
     {
@@ -943,7 +948,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
         "id": "JtgKm64nadDD",
         "outputId": "0d8780f9-cc8c-4504-89d2-0580ec1cfd20"
